test/io/sungeun/funcPtr3.good
funcPtr3.chpl:1: error: writeln: can not capture overloaded functions as values
