test/io/sungeun/funcPtr3.chpl
writeln(writeln); // missing parens and also this is weird
